2001-11-01  Glynn Foster  <glynn.foster@sun.com>

	* applet.c: * basep-widget.c: * basep-widget.h:
	* border-widget.c: * border-widget.h: * button-widget.c: 
	* conditional.c: * conditional.h: * drawer-widget.c: 
	* drawer-widget.h: * drawer.c: * extern.c: * floating-widget.c: 
	* floating-widget.h: * foobar-widget.c: * global-keys.c: 
	* menu-util.c: * menu.c: * multiscreen-stuff.c: * panel.c: 
	* panel_config.h: * session.c: * xstuff.c:

	Start shifting stuff slowly over towards a more GObject approach and
	making things a little bit more consistant with the type defs.
	
2001-10-31  Mark McLoughlin  <mark@skynet.ie>

	* applet-widget.c: kill old goad factory stuff.

	* applet.c, applet.h, extern.c, panel-widget.c:
	move various definitions of APPLET_EVENT_MASK to
	applet.h.

2001-10-26  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_Panel_TestApplet.server.in: s/TestApplet/Panel_TestApplet/g

	* applet-init.c, applet-init.h: crufty debugging functionality.
	(applet_debug_log), (applet_debug_init): impl.
	(applet_factory_main): use it.

	* extern.c: use Applet2 interface.

	* menu.c: (add_test_applet): s/TestApplet/Panel_TestApplet/g.

	* test-applet.c: use logging.

2001-10-25  Mark McLoughlin  <mark@skynet.ie>

	* applet-widget.c, applet-widget.h: kill applet_widget_init.

	* applet-init.c, applet-init.h: new files - init related stuff
	for libpanel-applet-2.

	* GNOME_Panel_TestApplet.server.in,  test-applet.c:
	simple applet for testing purposes. It doesn't work.

	* Makefile.am: update build.

	* extern.c: cosmetics.

2001-10-25  Mark McLoughlin  <mark@skynet.ie>

	* menu.c: (menus_have_icons): use gconf.

2001-10-25  Mark McLoughlin  <mark@skynet.ie>

	* session.c: (load_up_globals), (write_global_config),
	(convert_write_config): remove tile_when_over usage.

2001-10-25  Glynn Foster  <glynn.foster@sun.com>

	* panelglobalconfig.schema: First stab at creating 
	 a schema for the panel global config.

2001-10-25  Glynn Foster  <glynn.foster@sun.com>
