@@ -1,3 +1,8 @@
+2001-11-01  Mark McLoughlin  <mark@skynet.ie>
+
+	* panel-util.c: (panel_show_help): update for gnome-help
+	changes.
+
 2001-11-01  Glynn Foster  <glynn.foster@sun.com>
 
 	* applet.c: * basep-widget.c: * basep-widget.h:
